<resources>
    <string name="app_name">Project Barry</string>

    <string name="retry">Retry</string>

    <!-- Formatting -->
    <string name="percentage">%1$s%%</string>
    <string name="temperature_degrees_display">%1$s&#xb0;</string>
    <string name="speed_display">%1$sm/s</string>

    <!-- Conditions -->
    <string name="condition_clear">Clear</string>
    <string name="condition_clouds_few">Few clouds</string>
    <string name="condition_clouds_scattered">Scattered clouds</string>
    <string name="condition_clouds_broken">Broken clouds</string>
    <string name="condition_clouds_overcast">Overcast</string>
    <string name="condition_drizzle_light">Light drizzle</string>
    <string name="condition_drizzle">Drizzle</string>
    <string name="condition_drizzle_heavy">Heavy drizzle</string>
    <string name="condition_rain_light">Light rain</string>
    <string name="condition_rain">Rain</string>
    <string name="condition_rain_heavy">Heavy rain</string>
    <string name="condition_freezing_rain">Freezing rain</string>
    <string name="condition_snow">Snow</string>
    <string name="condition_snow_heavy">Heavy snow</string>
    <string name="condition_snow_rain">Snow and rain</string>
    <string name="condition_sleet">Sleet</string>
    <string name="condition_thunder_drizzle">Thunder and drizzle</string>
    <string name="condition_thunder_drizzle_heavy">Thunder and heavy drizzle</string>
    <string name="condition_thunder_rain">Thunder and rain</string>
    <string name="condition_thunder_rain_heavy">Thunder and heavy rain</string>
    <string name="condition_thunder">Thunder</string>
    <string name="condition_mist">Mist</string>
    <string name="condition_smoke">Smoke</string>
    <string name="condition_haze">Haze</string>
    <string name="condition_fog">Fog</string>
    <string name="condition_dust">Dust</string>
    <string name="condition_sand">Sand</string>
    <string name="condition_ash">Ash</string>
    <string name="condition_squall">Squall</string>
    <string name="condition_tornado">Tornado</string>

    <!-- Elements -->
    <string name="element_temperature">Temperature</string>
    <string name="element_pop">Rain</string>
    <string name="element_uv_index">UV index</string>
    <string name="element_feels_like">Feels like</string>
    <string name="element_humidity">Humidity</string>
    <string name="element_wind_speed">Wind speed</string>
    <string name="element_sunrise">Sunrise</string>
    <string name="element_sunset">Sunset</string>

    <!-- Navigation items -->
    <string name="nav_now">Now</string>
    <string name="nav_hourly">Hourly</string>
    <string name="nav_daily">Daily</string>

    <!-- Main -->
    <string name="location_loading">Fetching location</string>
    <string name="location_permission_title">We cannot access your location</string>
    <string name="location_permission_message">Unfortunately we don\'t have permission to access your current location</string>
    <string name="location_permission_allow">Grant permission</string>
    <string name="location_permission_static">Choose a location</string>

    <!-- Sections -->
    <string name="section_now">Right now</string>
    <string name="section_hourly">Coming up</string>
    <string name="section_daily">In the future</string>

    <!-- Locations -->
    <string name="current_location">Current location</string>
    <string name="location_search_secondary_empty">-</string>

    <!-- Error -->
    <string name="forecast_error_title">Could not load your forecast</string>
    <string name="forecast_error_message">Are you connected to the internet?</string>
    <string name="location_error_title">Could not get your location</string>
    <string name="location_error_message">Is your location turned on?</string>
</resources>